修改密钥引用问题

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
         directories:
             - node_modules
         before_install:
-            - openssl aes-256-cbc -K encrypted_040d2a2f1223_key -iv encrypted_040d2a2f1223_iv
+            - openssl aes-256-cbc -K $encrypted_040d2a2f1223_key -iv $encrypted_040d2a2f1223_iv
               -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
             - chmod 600 ~/.ssh/id_rsa
             - eval $(ssh-agent)
