--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "lusyoe.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": "3.3.8"
+  },
   "scripts": {
-    "test": "echo hello test"
+      "test": "echo success!"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lusyoe/lusyoe.github.io.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lusyoe/lusyoe.github.io/issues"
-  },
-  "homepage": "https://github.com/lusyoe/lusyoe.github.io#readme"
+  "dependencies": {
+    "hexo": "^3.2.0",
+    "hexo-deployer-git": "^0.1.0",
+    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.0",
+    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-json-content": "^2.2.0",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-less": "^0.1.3",
+    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-server": "^0.2.0"
+  }
 }
